# midi-shell

./: CMakeLists.txt  README.md
lisp/: stdlib.scm  sy77.scm  sysex.scm  xg.scm
sources/: midi-shell.cc
